feat: add icons and favicons, update manifest

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" type="image/png" sizes="196x196" href="%PUBLIC_URL%/images/favicon-196.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#328efe" />
+    <meta name="theme-color" content="#272727" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>WykopX</title>
   </head>
