feat: enhance meta

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" sizes="196x196" href="%PUBLIC_URL%/images/favicon-196.png" />
+    <link rel="icon" type="image/png" sizes="196x196" href="%PUBLIC_URL%/images/icon-196.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#272727" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icon-192.png">
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="WykopX" />
+    <meta property="og:description" content="Lepsza wersja Wykop.pl" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/icon-196.png" />
+    <meta property="og:url" content="wykopx.pl" />
+    <meta property="og:site_name" content="WykopX" />
+
+    <meta name="twitter:title" content="WykopX" />
+    <meta name="twitter:description" content="Lepsza wersja Wykop.pl" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/icon-196.png" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icon-196.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/images/icon-192.png" />
+
     <title>WykopX</title>
   </head>
   <body>
