fix: share icon size

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <meta property="og:site_name" content="WykopX" />
 
     <meta name="twitter:title" content="WykopX" />
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description" content="Lepsza strona Wykop.pl" />
     <meta name="twitter:image" content="%PUBLIC_URL%/images/icon-196.png" />
 
