--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,20 @@
     <meta property="og:site_name" content="WykopX" />
 
     <meta name="twitter:title" content="WykopX" />
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Lepsza strona Wykop.pl" />
     <meta name="twitter:image" content="%PUBLIC_URL%/images/icon-196.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icon-196.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/images/icon-192.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>WykopX</title>
   </head>
