--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" sizes="196x196" href="%PUBLIC_URL%/images/icon-196.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#272727" />
     <meta name="description" content="Lepsza strona Wykop.pl" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/images/favicon-192.png" />
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="WykopX" />
     <meta property="og:description" content="Lepsza strona Wykop.pl" />
-    <meta property="og:image" content="%PUBLIC_URL%/images/icon-196.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/icon-192.png" />
     <meta property="og:url" content="wykopx.pl" />
     <meta property="og:site_name" content="WykopX" />
 
     <meta name="twitter:title" content="WykopX" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Lepsza strona Wykop.pl" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/images/icon-196.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/icon-192.png" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icon-196.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/images/favicon-192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/images/icon-192.png" />
+    <link rel="apple-touch-startup-image" sizes="192x192" href="%PUBLIC_URL%/images/icon-192.png" />
+    <link rel="apple-touch-startup-image" sizes="384x384" href="%PUBLIC_URL%/images/icon-384.png" />
+    <link rel="apple-touch-startup-image" sizes="512x512" href="%PUBLIC_URL%/images/icon-512.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
