--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,19 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="WykopX" />
     <meta property="og:description" content="Lepsza strona Wykop.pl" />
-    <meta property="og:image" content="%PUBLIC_URL%/images/icon-192.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/icon-512.png" />
     <meta property="og:url" content="wykopx.pl" />
     <meta property="og:site_name" content="WykopX" />
 
+    <meta name="twitter:site" content="WykopX" />
     <meta name="twitter:title" content="WykopX" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Lepsza strona Wykop.pl" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/images/icon-192.png" />
+    <meta
+      name="twitter:image"
+      href="%PUBLIC_URL%/images/icon-512.png"
+      content="%PUBLIC_URL%/images/icon-512.png"
+    />
 
     <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/images/favicon-192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
