build: change react-scripts to vite

--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#272727" />
     <meta name="description" content="Lepsza strona Wykop.pl" />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/images/favicon-192.png" />
-
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/favicon-192.png" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="WykopX" />
     <meta property="og:description" content="Lepsza strona Wykop.pl" />
-    <meta property="og:image" content="%PUBLIC_URL%/images/icon-512.png" />
+    <meta property="og:image" content="/images/icon-512.png" />
     <meta property="og:url" content="wykopx.pl" />
     <meta property="og:site_name" content="WykopX" />
 
@@ -20,17 +18,12 @@
     <meta name="twitter:title" content="WykopX" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Lepsza strona Wykop.pl" />
-    <meta
-      name="twitter:image"
-      href="%PUBLIC_URL%/images/icon-512.png"
-      content="%PUBLIC_URL%/images/icon-512.png"
-    />
-
-    <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/images/favicon-192.png" />
+    <meta name="twitter:image" href="/images/icon-512.png" content="/images/icon-512.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/images/favicon-192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-startup-image" sizes="192x192" href="%PUBLIC_URL%/images/icon-192.png" />
-    <link rel="apple-touch-startup-image" sizes="384x384" href="%PUBLIC_URL%/images/icon-384.png" />
-    <link rel="apple-touch-startup-image" sizes="512x512" href="%PUBLIC_URL%/images/icon-512.png" />
+    <link rel="apple-touch-startup-image" sizes="192x192" href="/images/icon-192.png" />
+    <link rel="apple-touch-startup-image" sizes="384x384" href="/images/icon-384.png" />
+    <link rel="apple-touch-startup-image" sizes="512x512" href="/images/icon-512.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -38,11 +31,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-
     <title>WykopX</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
