feat: update description kekw

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#272727" />
-    <meta name="description" content="Lepsza strona Wykop.pl" />
+    <meta name="description" content="Ta lepsza strona Wykopu" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/png" sizes="192x192" href="/images/favicon-192.png" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="WykopX" />
-    <meta property="og:description" content="Lepsza strona Wykop.pl" />
+    <meta property="og:description" content="Ta lepsza strona Wykopu" />
     <meta property="og:image" content="/images/icon-512.png" />
     <meta property="og:url" content="wykopx.pl" />
     <meta property="og:site_name" content="WykopX" />
@@ -17,7 +17,7 @@
     <meta name="twitter:site" content="WykopX" />
     <meta name="twitter:title" content="WykopX" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:description" content="Lepsza strona Wykop.pl" />
+    <meta name="twitter:description" content="Ta lepsza strona Wykopu" />
     <meta name="twitter:image" href="/images/icon-512.png" content="/images/icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="/images/favicon-192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
