--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/png" sizes="192x192" href="/images/favicon-192.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="WykopX" />
+    <meta property="og:title" content="WykopXD" />
     <meta property="og:description" content="Ta lepsza strona Wykopu" />
     <meta property="og:image" content="/images/icon-512.png" />
-    <meta property="og:url" content="wykopx.pl" />
-    <meta property="og:site_name" content="WykopX" />
+    <meta property="og:url" content="wykopxd.pl" />
+    <meta property="og:site_name" content="WykopXD" />
 
-    <meta name="twitter:site" content="WykopX" />
-    <meta name="twitter:title" content="WykopX" />
+    <meta name="twitter:site" content="WykopXD" />
+    <meta name="twitter:title" content="WykopXD" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Ta lepsza strona Wykopu" />
     <meta name="twitter:image" href="/images/icon-512.png" content="/images/icon-512.png" />
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <title>WykopX</title>
+    <title>WykopXD</title>
   </head>
   <body>
     <div id="root"></div>
