--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <!-- <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" /> -->
     <title>WykopXD</title>
   </head>
   <body>
